<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_photo"
        style="@style/DialogButton"
        android:padding="@dimen/spacing_medium"
        android:drawableLeft="@drawable/ic_upload"
        android:text="@string/choose_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_photo"
        style="@style/DialogButton"
        android:drawableLeft="@drawable/ic_camera"
        android:text="@string/take_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_photo"
        style="@style/DialogButton"
        android:drawableLeft="@drawable/ic_delete"
        android:text="@string/delete" />

</LinearLayout>