<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_search_field"
    android:layout_margin="@dimen/spacing_xsmall"
    android:background="@drawable/rounded_rectangle"
    android:elevation="@dimen/elevation_light">

    <ImageButton
        android:id="@+id/make_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="@dimen/spacing_medium"
        android:background="@color/white"
        android:contentDescription="@string/search_button"
        android:src="@drawable/ic_search_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/voice_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@color/white"
        android:contentDescription="@string/voice_search_button"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/textInputEditText"
        style="@style/SearchEditText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:hint="@string/enter_event_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/voice_search_button"
        app:layout_constraintStart_toEndOf="@+id/make_search_button"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>